--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                 </div>
                 <div class="bottom-img">
                     <figure>
-                        <img src="img/Figma-EX1.png" alt="">
+                        <img src="img/FIGMAbt1.png" alt="">
                     </figure>
                     <div class="link-Figma">
                         <button>
-                            <a style="color: white; text-decoration: none;"  href="https://www.figma.com/file/4r3kj4K54osRjgCv8uWyRb/Untitled?type=design&node-id=0%3A1&mode=design&t=SPxsWgKkY4ojh3Qa-1">FIGMA</a>
+                            <a style="color: white; text-decoration: none;"  href="https://www.figma.com/file/4r3kj4K54osRjgCv8uWyRb/F-pattern?type=design&node-id=1%3A3&mode=design&t=PSKsn5FU832JycsC-1">FIGMA</a>
                         </button>
                     </div>
                 </div>
